--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.annapol04.munchkin">
 
     <application
-        android:allowBackup="true"
+        android:name=".MunchkinApp"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
             android:screenOrientation="landscape">
@@ -20,8 +23,13 @@
         </activity>
         <activity
             android:name=".PlayDesk"
+            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".gui.HighscoreActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".gui.HighscoreActivity"></activity>
+        <activity
+            android:name=".gui.GameDetailActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
