--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
     <application
-        android:name=".MunchkinApp"
+        android:name=".App"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -37,12 +37,6 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".gui.PlayDeskActivity"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".gui.HighscoreActivity"
-            android:screenOrientation="landscape" />
-        <activity
-            android:name=".gui.GameDetailActivity"
             android:screenOrientation="landscape" />
 
     </application>
