--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
-        config {
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
-            storeFile file('/Users/anastasiiapolishchuk/.android/debug.keystore')
-            storePassword 'android'
-        }
-    }
+
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
@@ -18,16 +11,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-        debug {
-            signingConfig signingConfigs.config
-        }
+
     }
     dataBinding {
         enabled = true
@@ -38,9 +28,18 @@ android {
     }
     productFlavors {
     }
+
+    sourceSets {
+        main {
+            java {
+                exclude '**/logic/**.java'
+            }
+        }
+    }
 }
 
 dependencies {
+    implementation 'com.android.support:design:26.1.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -67,6 +66,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
 }
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
