--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,11 @@ android {
     }
     productFlavors {
     }
-
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
     sourceSets {
         main {
             java {
@@ -39,17 +43,22 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:design:26.1.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testImplementation "org.robolectric:robolectric:3.6.1"
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'android.arch.core:core-testing:1.0.0'
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestImplementation 'android.arch.core:core-testing:1.0.0'
     implementation 'com.google.android.gms:play-services-games:11.6.0'
     implementation 'com.google.android.gms:play-services-auth:11.6.0'
     implementation 'com.google.android.gms:play-services-identity:11.6.0'
@@ -63,11 +72,7 @@ dependencies {
     // if you use the support libraries
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
 }
-
-
 
 
 apply plugin: 'com.google.gms.google-services'
