implemented build flavors

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-
+    signingConfigs {
+        config {
+            storeFile file('../debug.keystore')
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storePassword 'android'
+        }
+    }
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
@@ -10,14 +17,19 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        signingConfig signingConfigs.config
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            versionNameSuffix "-release"
         }
-
+        debug {
+            debuggable true
+            versionNameSuffix "-debug"
+        }
     }
     dataBinding {
         enabled = true
@@ -26,7 +38,21 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    // Specifies the flavor dimensions you want to use. The order in which you
+    // list each dimension determines its priority, from highest to lowest,
+    // when Gradle merges variant sources and configurations. You must assign
+    // each product flavor you configure to one of the flavor dimensions.
+    flavorDimensions "mode"
     productFlavors {
+        online {
+            // Assigns this product flavor to the "mode" flavor dimension.
+            dimension "mode"
+            versionNameSuffix "-online"
+        }
+        offline {
+            dimension "mode"
+            versionNameSuffix "-offline"
+        }
     }
     testOptions {
         unitTests {
@@ -48,7 +74,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testImplementation "org.robolectric:robolectric:3.6.1"
+    testImplementation 'org.robolectric:robolectric:3.6.1'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.+'
